<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">[Block]</string>
    <string name="hello_world">Hello world!</string>
    <string name="time_placeholder">[TIME]</string>
    <string name="content_placeholder">[SOME INFORMATION HERE]</string>
    <string name="device_name_placeholder">[DEVICE NAME]</string>
    <string name="connection_state_placeholder">[CONNECTION STATE]</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_device_scan">DeviceScanActivity</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_service">Unknown service</string>

    <string name="title_devices">Getting started... </string>
    <string name="select_device">Select [Block] to connect: </string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="ble_not_supported">BLE is not supported</string>

    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>

    <!--MENU OPTIONS-->
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>

</resources>
