<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/ivBlockLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/title_placeholder" />

    <TextView
        android:id="@+id/tvDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_name_placeholder" />

    <TextView
        android:id="@+id/tvConnectionState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/connection_state_placeholder" />

    <TextView
        android:id="@+id/tvDataField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/content_placeholder" />

    <Button
        android:id="@+id/btnConnectionToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toggleConnection"
        android:text="@string/action_disconnect"
        android:visibility="visible" />
    
    <Button
        android:id="@+id/btnSendColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendColor"
        android:text="Send"/>

    <ListView
        android:id="@+id/lvNotifications"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>